# aospdtgenUI

./: ANNOUNCEMENT.md  README.md  pyproject.toml
aospdtgen/: device_tree.py  gui.py  main.py
aospdtgen/templates/: BoardConfig.mk.jinja2  device.mk.jinja2  lineage_device.mk.jinja2
