#
# SPDX-FileCopyrightText: The LineageOS Project
# SPDX-License-Identifier: Apache-2.0
#

[tool.poetry]
name = "aospdtgenUI"
version = "1.2.1"
description = "Create an Android device tree from a device dump with GUI and Dual Support"
authors = ["Sebastiano Barezzi <seba@sebaubuntu.dev>", "RetroFrost"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/RetroFrost/aospdtgenUI"

[tool.poetry.scripts]
aospdtgen = 'aospdtgen.main:main'
aospdtgenUI = 'aospdtgen.main:main'

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.1.6"
GitPython = "^3.1.45"
sebaubuntu-libs = "^2.0.0"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
